# PersonalDiary

./: .env.sample  .gitignore  Dockerfile  diary.json  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
diary/migrations/: 0003_alter_diary_options.py  0004_diary_author.py  0005_alter_diary_author.py  0006_alter_diary_updated_at.py
diary/templates/diary/: diary_confirm_delete.html  diary_detail.html  diary_form.html  diary_list.html  home.html
diary/templates/diary/includes/: inc_menu.html
fixtures/: diary.json  users.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
